fix: fix content width and horizontal overflow on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,15 @@
 @tailwind utilities;
 
 @layer base {
-  body {
+  html, body {
     @apply bg-[#FFF5F5] text-neutral;
+    overflow-x: hidden;
+    width: 100%;
+  }
+  
+  #app {
+    overflow-x: hidden;
+    width: 100%;
   }
 }
 
